--- a/env.sample
+++ b/env.sample
@@ -1,5 +1,5 @@
-SUPABASE_DB_HOST=...
-SUPABASE_DB_PORT=...
-SUPABASE_DB_NAME=...
-SUPABASE_DB_USER=...
-SUPABASE_DB_PASSWORD=...
+SUPABASE_DB_HOST=aws-0-sa-east-1.pooler.supabase.com
+SUPABASE_DB_PORT=5432
+SUPABASE_DB_NAME=postgres
+SUPABASE_DB_USER=postgres.ezmbukiqjrvitutacwtp
+SUPABASE_DB_PASSWORD=ornebeamedcheck
